<resources>
    <string name="app_name">konnect</string>
    <string name="home_title">CONECTANDO TODOS OS GRUPOS</string>
    <string name="home_text">A rede social verdadeira</string>
    <string name="button_login">Entrar</string>
    <string name="button_home_login">Fazer login</string>
    <string name="button_about">Sobre</string>
    <string name="button_repo">Repositório</string>
    <string name="text_no_account">Não tem conta?</string>
    <string name="button_register">Criar conta</string>
    <string name="text_already_registered">Já tem conta?</string>
    <string name="text_welcome">Seja bem-vindo ao Konnect</string>
    <string name="text_welcome_subtitle">Crie conexões reais</string>
    <string name="label_username">Username</string>
    <string name="placeholder_username">kool_username</string>
    <string name="label_password">Password</string>
    <string name="placeholder_password">******</string>
    <string name="button_confirm">Confirmar</string>
    <string name="text_register">Crie sua conta</string>
    <string name="text_register_subtitle">Acompanhe os posts somente de quem interessa. Sem mais.</string>
    <string name="button_back">Voltar</string>
    <string name="text_interested">Ficou interessado?</string>
    <string name="button_about_us">Saiba mais sobre nós</string>
    <string name="my_post">Blá blá blá</string>
    <string name="text_search">Pesquise</string>
    <string name="text_placeholder_post">O que está pensando?</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_groups">Groups</string>
    <string name="groups_title">Seus grupos</string>
    <string name="notifications_title">Suas notificações</string>
    <string name="post_button">Postar</string>
</resources>