<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_white">

    <!-- Header -->
    <com.example.konnect.ComponentHeader
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerText="Diogo Laurindo"
        app:showExitButton="true" />

    <!-- Scrollable Body -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:id="@+id/body_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Feed Section -->
            <LinearLayout
                android:id="@+id/feed_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <!--Search Bar-->
                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_search"
                    android:padding="16dp"
                    android:background="@drawable/rounded_border"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    android:drawableStart="@drawable/konnect_search"
                    android:drawablePadding="12dp"/>

                <LinearLayout
                    android:id="@+id/grau_buttons_container"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/grau_min_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="Grau Mínimo"
                        android:contentDescription="Grau Mínimo"
                        android:textColor="@color/primary" />

                    <Button
                        android:id="@+id/grau_max_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="Grau Máximo"
                        android:contentDescription="Grau Máximo"
                        android:textColor="@color/primary" />
                </LinearLayout>

                <!--Create post-->
                <EditText
                    android:id="@+id/content_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/text_placeholder_post"
                    android:hint="@string/text_placeholder_post"
                    android:padding="16dp"
                    android:background="@drawable/rounded_border"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <Button
                        android:id="@+id/post_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primary"
                        android:text="Postar" />
                </LinearLayout>

                <!-- Post List -->
                <LinearLayout
                    android:id="@+id/feed_list_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp">
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feed_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/users_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone" />
            </LinearLayout>

            <!-- Groups Section -->
            <LinearLayout
                android:id="@+id/groups_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <!-- Group Box 1 -->
                <LinearLayout
                    android:id="@+id/group_box_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_marginTop="4dp"
                    android:elevation="4dp"
                    android:background="@drawable/rounded_border">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_gravity="start">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Shining Star"
                            android:textSize="16sp"
                            android:textColor="@color/black" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="25"
                            android:textSize="16sp"
                            android:textColor="@color/primary"
                            android:gravity="center_vertical" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Group Box 2 -->
                <LinearLayout
                    android:id="@+id/group_box_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_marginTop="8dp"
                    android:elevation="4dp"
                    android:background="@drawable/rounded_border">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="start">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Beaty queens"
                            android:textSize="16sp"
                            android:textColor="@color/black" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="32"
                            android:textSize="16sp"
                            android:textColor="@color/primary"
                            android:gravity="center_vertical" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Group Box 3 -->
                <LinearLayout
                    android:id="@+id/group_box_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_marginTop="8dp"
                    android:elevation="4dp"
                    android:background="@drawable/rounded_border">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_gravity="start">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Angry uncles"
                            android:textSize="16sp"
                            android:textColor="@color/black" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="19"
                            android:textSize="16sp"
                            android:textColor="@color/primary"
                            android:gravity="center_vertical" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- Notifications Section -->
            <LinearLayout
                android:id="@+id/notifications_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            </LinearLayout>

            <!-- Graph Section -->
            <LinearLayout
                android:id="@+id/graph_section"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:orientation="vertical"
                android:visibility="gone">

                <!-- Graph -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="600dp">

                    <com.example.konnect.GraphView
                        android:id="@+id/graphView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Navbar/Footer -->
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:showDividers="middle"
        android:divider="?android:attr/dividerVertical"
        android:background="@color/primary"
        android:dividerPadding="8dp">

        <ImageButton
            android:id="@+id/nav_feed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/konnect_house_white_32"
            android:contentDescription="@string/nav_feed" />

        <ImageButton
            android:id="@+id/nav_groups"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/konnect_group_white_32"
            android:contentDescription="@string/nav_groups" />

        <ImageButton
            android:id="@+id/nav_notifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/konnect_notif_white_32"
            android:contentDescription="@string/nav_notifications" />

        <ImageButton
            android:id="@+id/nav_graph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/konnect_graph_white_32"
            android:contentDescription="@string/nav_notifications" />
    </LinearLayout>
</LinearLayout>
